# backprop-learn

./: .gitignore  Backprop-Learn-Class.html  Backprop-Learn-Component-Combinator.html  Backprop-Learn-Component-Dropout.html  Backprop-Learn-Component-FullyConnected.html  Backprop-Learn-Component-Function.html  Backprop-Learn-Component-Parameter.html  Backprop-Learn-Component-State.html  Backprop-Learn-Component-Stochastic.html  Backprop-Learn-Dropout.html  Backprop-Learn-FullyConnected.html  Backprop-Learn-Function.html  Backprop-Learn-Initialize.html  Backprop-Learn-Loss.html  Backprop-Learn-Model-Class.html  Backprop-Learn-Model-Combinator.html  Backprop-Learn-Model-FullyConnected.html  Backprop-Learn-Model-Function.html  Backprop-Learn-Model-Neural-LSTM.html  Backprop-Learn-Model-Neural.html  Backprop-Learn-Model-Parameter.html  Backprop-Learn-Model-Regression.html  Backprop-Learn-Model-State.html  Backprop-Learn-Model-Stochastic.html  Backprop-Learn-Model-Types.html  Backprop-Learn-Model.html  Backprop-Learn-Regularize.html  Backprop-Learn-Run.html  Backprop-Learn-Test.html  Backprop-Learn-Train.html  Backprop-Learn.html  Build.hs  Data-Type-Mayb.html  Data-Type-NonEmpty.html  Data-Type-Tuple.html  Learn-Neural-Layer-Applying.html  Learn-Neural-Layer-Compose.html  Learn-Neural-Layer-FullyConnected.html  Learn-Neural-Layer-Identity.html  Learn-Neural-Layer-Mapping.html  (+79 more)
app/: Arith.hs  Autoencoder.hs  Language.hs  Letter2Vec.hs  MNIST.hs  Sine.hs  arima.hs  arma.hs  backprop-learn-mnist.hs  char-rnn.hs  mnist.hs  series.hs  word2vec.hs
demo/: HelloMain.hs  mnist-ghcjs.hs  mnist-ghcjs.js_o
old/src/Data/Type/: Util.hs
old/src/Learn/Neural/: Layer.hs  Test.hs
old/src/Learn/Neural/Layer/: Compose.hs  Mapping.hs
old/src/Numeric/: BLAS.hs  Tensor.hs
old/src/Numeric/BLAS/: NVector.hs
old2/src/Backprop/: Learn.hs
old2/src/Backprop/Learn/: Initialize.hs  Model.hs  Test.hs  Train.hs
old2/src/Backprop/Learn/Model/: Function.hs  Parameter.hs  Regression.hs  State.hs
old2/src/Data/Type/: Mayb.hs  NonEmpty.hs
src/: Backprop.Learn.Class.html  Backprop.Learn.Component.Combinator.html  Backprop.Learn.Component.Dropout.html  Backprop.Learn.Component.FullyConnected.html  Backprop.Learn.Component.Function.html  Backprop.Learn.Component.Parameter.html  Backprop.Learn.Component.State.html  Backprop.Learn.Component.Stochastic.html  Backprop.Learn.Dropout.html  Backprop.Learn.FullyConnected.html  Backprop.Learn.Function.html  Backprop.Learn.Initialize.html  Backprop.Learn.Loss.html  Backprop.Learn.Model.Class.html  Backprop.Learn.Model.Combinator.html  Backprop.Learn.Model.FullyConnected.html  Backprop.Learn.Model.Function.html  Backprop.Learn.Model.Neural.LSTM.html  Backprop.Learn.Model.Neural.html  Backprop.Learn.Model.Parameter.html  Backprop.Learn.Model.Regression.html  Backprop.Learn.Model.State.html  Backprop.Learn.Model.Stochastic.html  Backprop.Learn.Model.Types.html  Backprop.Learn.Model.html  Backprop.Learn.Regularize.html  Backprop.Learn.Run.html  Backprop.Learn.Test.html  Backprop.Learn.Train.html  Backprop.Learn.html  Data.Type.Mayb.html  Data.Type.NonEmpty.html  Data.Type.Tuple.html  Data.Type.Util.html  Learn.Neural.Layer.Applying.html  Learn.Neural.Layer.Compose.html  Learn.Neural.Layer.FullyConnected.html  Learn.Neural.Layer.Identity.html  Learn.Neural.Layer.Mapping.html  Learn.Neural.Layer.Recurrent.FullyConnected.html  (+16 more)
src/Backprop/: Learn.hs
src/Backprop/Learn/: Class.hs  Dropout.hs  FullyConnected.hs  Function.hs  Initialize.hs  Loss.hs  Model.hs  Regularize.hs  Run.hs  Test.hs  Train.hs
src/Backprop/Learn/Component/: Combinator.hs  Dropout.hs  FullyConnected.hs  Function.hs  Parameter.hs  State.hs  Stochastic.hs
src/Backprop/Learn/Model/: Class.hs  Combinator.hs  FullyConnected.hs  Function.hs  Neural.hs  Parameter.hs  Regression.hs  State.hs  Stochastic.hs  Types.hs
src/Backprop/Learn/Model/Neural/: LSTM.hs
src/Data/Type/: Mayb.hs  NonEmpty.hs  Tuple.hs  Util.hs
src/Learn/: Neural.hs
src/Learn/Neural/: Layer.hs  Loss.hs  Network.hs  Test.hs  Train.hs
src/Learn/Neural/Layer/: Applying.hs  FullyConnected.hs  Identity.hs  Map.hs  MapLayer.hs  Mapping.hs
src/Learn/Neural/Layer/Recurrent/: FullyConnected.hs  LSTM.hs
src/Learn/Neural/Network/: Dropout.hs
src/Numeric/: BLAS.hs  BLASTensor.hs  Tensor.hs
src/Numeric/BLAS/: Accelerate.hs  FVector.hs  HMatrix.hs  NVector.hs
src/Numeric/BLASTensor/: HMatrix.hs
