name:                backprop-learn
version:             0.1.0.0
synopsis:            Combinators and useful tools for ANNs using the backprop library
description:         See README.md
homepage:            https://github.com/mstksg/backprop-learn
bug-reports:         https://github.com/mstksg/backprop-learn/issues
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Numeric.BLAS
                       Numeric.BLASTensor.HMatrix
                       Numeric.BLASTensor
                       Numeric.Tensor
                       Learn.Neural.Layer
                       Learn.Neural.Layer.Identity
                       Learn.Neural.Network
                       Learn.Neural.Layer.Mapping
                       Learn.Neural.Layer.Applying
                       Learn.Neural.Layer.FullyConnected
                       Learn.Neural.Layer.Recurrent.FullyConnected
  other-modules:       Data.Type.Util
  build-depends:       base >= 4.7 && < 5
                     , ad
                     , backprop
                     , deepseq
                     , finite-typelits
                     , generics-sop
                     , hmatrix    >= 0.18
                     , mono-traversable
                     , mwc-random
                     , primitive
                     , reflection
                     , singletons
                     , statistics
                     , type-combinators
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall

executable backprop-learn-mnist
  hs-source-dirs:      app
  main-is:             MNIST.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
                       -- -ddump-rule-firings
                       -- -ddump-to-file
  build-depends:       base
                     , backprop-learn
                     , finite-typelits
                     , bifunctors
                     , deepseq
                     , hmatrix
                     , mnist-idx
                     , mwc-random
                     , transformers
                     , vector
                     -- , boxes
                     -- , bytestring
                     -- , containers
                     -- , deepseq
                     -- , directory
                     -- , either
                     -- , filepath
                     -- , finite-typelits
                     -- , foldl
                     -- , http-conduit
                     -- , mnist-idx
                     -- , mwc-random
                     -- , optparse-applicative
                     -- , profunctors
                     -- , singletons
                     -- , statistics
                     -- , tensor-ops
                     -- , text
                     -- , time
                     -- , transformers
                     -- , type-combinators
                     -- , typelits-witnesses
                     -- , vector
                     -- , zlib
  default-language:    Haskell2010

-- test-suite backprop-learn-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , backprop-learn
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/backprop-learn
