name:                backprop-learn
version:             0.1.0.0
synopsis:            Combinators and useful tools for ANNs using the backprop library
description:         See README.md
homepage:            https://github.com/mstksg/backprop-learn
bug-reports:         https://github.com/mstksg/backprop-learn/issues
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Learn.Neural
                       Learn.Neural.Layer
                       Learn.Neural.Layer.Applying
                       Learn.Neural.Layer.Compose
                       Learn.Neural.Layer.FullyConnected
                       Learn.Neural.Layer.Identity
                       Learn.Neural.Layer.Mapping
                       Learn.Neural.Layer.Recurrent.FullyConnected
                       Learn.Neural.Layer.Recurrent.LSTM
                       Learn.Neural.Loss
                       Learn.Neural.Network
                       Learn.Neural.Network.Dropout
                       Learn.Neural.Test
                       Learn.Neural.Train
                       Numeric.BLAS
                       Numeric.BLAS.FVector
                       Numeric.BLAS.HMatrix
                       Numeric.BLAS.NVector
                       Numeric.Tensor
  other-modules:       Data.Type.Util
  build-depends:       base >= 4.7 && < 5
                     , ad
                     , backprop
                     , data-default
                     , deepseq
                     , finite-typelits
                     , foldl
                     , generics-lift
                     , generics-sop
                     , hmatrix    >= 0.18
                     , mono-traversable
                     , mwc-random
                     , primitive
                     , profunctors
                     , reflection
                     , singletons
                     , split
                     , statistics
                     , transformers
                     , type-combinators
                     , microlens
                     , type-combinators-singletons
                     , vector
                     , vector-sized
  default-language:    Haskell2010
  ghc-options:         -Wall

executable backprop-learn-mnist
  hs-source-dirs:      app
  main-is:             MNIST.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
                       -- -ddump-rule-firings
                       -- -ddump-to-file
  build-depends:       base
                     , backprop-learn
                     , bifunctors
                     , deepseq
                     , finite-typelits
                     , hmatrix
                     , data-default
                     , mnist-idx
                     , mwc-random
                     , split
                     , time
                     , transformers
                     , type-combinators
                     , vector
  default-language:    Haskell2010

executable backprop-learn-language
  hs-source-dirs:      app
  main-is:             Language.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
                       -- -ddump-rule-firings
                       -- -ddump-to-file
  build-depends:       base
                     , backprop
                     , backprop-learn
                     , data-default
                     , deepseq
                     , finite-typelits
                     , mwc-random
                     , primitive
                     , split
                     , time
                     , transformers
                     , type-combinators
                     , vector
                     , vector-algorithms
                     , vector-sized
  default-language:    Haskell2010

executable backprop-learn-letter2vec
  hs-source-dirs:      app
  main-is:             Letter2Vec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
                       -- -ddump-rule-firings
                       -- -ddump-to-file
  build-depends:       base
                     , backprop
                     , backprop-learn
                     , data-default
                     , deepseq
                     , finite-typelits
                     , mwc-random
                     , primitive
                     , singletons
                     , split
                     , time
                     , transformers
                     , type-combinators
                     , vector
                     , vector-algorithms
                     , vector-sized
  default-language:    Haskell2010

-- test-suite backprop-learn-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , backprop-learn
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/backprop-learn
